# typedb-client-haskell

./: .gitmodules  QueryDSL.hs  README.md  default.nix  grakn-client.cabal  recompile-protocol.sh  release.nix  shell.nix  typedb-client.cabal  typedb.nix  unstable.nix
.github/workflows/: main.yml
lib/: Answer.hs  Concept.hs  CoreDatabase.hs  CoreService.hs  GraknClient.hs  GraknTestServer.hs_  Logic.hs  Options.hs  Query.hs  Session.hs  Tests_TypeDBQuery.hs  Transaction.hs  TypeDB.hs  TypeDBClient.hs  TypeDBQuery.hs  TypeDBTH.hs  TypeDBTransaction.hs  TypeQLParser.hs  Types.hs  backups.hs
lib/fixedProtobuf/: answer.proto  core_service.proto  logic.proto  query.proto  session.proto  transaction.proto
lib/patches/: Concept.patch  Transaction.patch
src/: GraknExample.hs  TypeDBExample.hs
